added the BreadcrumbList types and itemListElements for the brand-box

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,5 +5,131 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/css/main.css")
         title DOKUA TEST
-    body Initial
+    body 
+     .brands-box(itemscope itemtype="https://schema.org/BreadcrumbList")
+      h1.heading-primary(itemprop="name") Мы продаем запчасти для <br> следующих марок автомобилей:
+
+      ul.brands-box__list(itemscope itemtype="https://schema.org/BreadcrumbList")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") Audi
+         meta(itemprop="position" content="1")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") Ford
+         meta(itemprop="position" content="2")
+    
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") Mazda
+         meta(itemprop="position" content="3")
+      
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") Peugeot
+         meta(itemprop="position" content="4")
+       
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") Subaru
+         meta(itemprop="position" content="5")
+       
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") BMW
+         meta(itemprop="position" content="6")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") Kia
+         meta(itemprop="position" content="7")
+    
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") Nissan
+         meta(itemprop="position" content="8")
+        
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") Skoda
+         meta(itemprop="position" content="9")
+    
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") Volkswagen
+         meta(itemprop="position" content="10")
+    
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") Fiat
+         meta(itemprop="position" content="11")
+    
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brands-box__link(href="#" itemprop="item") 
+         span(itemprop="name") Lexus
+         meta(itemprop="position" content="12")
+    
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") Opel
+          meta(itemprop="position" content="13")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") SsangYong
+          meta(itemprop="position" content="14")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") Volvo
+          meta(itemprop="position" content="15")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") Masserati
+          meta(itemprop="position" content="16")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") Audi
+          meta(itemprop="position" content="17")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") Mazda
+          meta(itemprop="position" content="18")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") Honda
+          meta(itemprop="position" content="19")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") Mercedes
+          meta(itemprop="position" content="20")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") Renault
+          meta(itemprop="position" content="21")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") Suzuki
+          meta(itemprop="position" content="22")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") Chevrolet
+          meta(itemprop="position" content="23")
+
+       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+         a.brands-box__link(href="#" itemprop="item") 
+          span(itemprop="name") Renault
+          meta(itemprop="position" content="24")
+
+    
 
