--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,13 @@
 body {
+  font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
   color: #333; }
+
+.heading-primary {
+  line-height: 3.2rem;
+  color: #000;
+  font-weight: 500;
+  font-size: 2.4rem; }
 
 *,
 *::before,
