--- a/pug/index.pug
+++ b/pug/index.pug
@@ -4,6 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/css/main.css")
+        link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet")
         title DOKUA TEST
     body 
      .brands-box(itemscope itemtype="https://schema.org/BreadcrumbList")
