--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,5 +1,12 @@
 body {
-  // font-family: ;
+  font-family: "Roboto", sans-serif;
   font-size: $default-font-size; // 16px // 1rem = 10px
   color: $color-primary;
+}
+
+.heading-primary {
+  line-height: 3.2rem;
+  color: $color-black;
+  font-weight: 500;
+  font-size: 2.4rem;
 }
