added a brands-box layouts component

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -8,7 +8,7 @@ html(lang="en")
         title DOKUA TEST
     body 
      .brands-box(itemscope itemtype="https://schema.org/BreadcrumbList")
-      h1.heading-primary(itemprop="name") Мы продаем запчасти для <br> следующих марок автомобилей:
+      h1.heading-primary.mb-7per(itemprop="name") Мы продаем запчасти для <br> следующих марок автомобилей:
 
       ul.brands-box__list(itemscope itemtype="https://schema.org/BreadcrumbList")
 
