--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 // COLORS
 $color-primary: #333;
+$color-gray: #e5e5e5;
 
 $color-white: #fff;
 $color-black: #000;
@@ -8,3 +9,4 @@ $color-black: #000;
 $default-font-size: 1.6rem;
 
 // FONTS
+$font-roboto: "Roboto", sans-serif;
