--- a/pug/index.pug
+++ b/pug/index.pug
@@ -4,133 +4,189 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/css/main.css")
-        link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet")
         title DOKUA TEST
     body 
-     .brands-box(itemscope itemtype="https://schema.org/BreadcrumbList")
+     // sprites
+     svg(style="display: none;")
+      // sprite 1
+      symbol#arrow-right
+       g
+        path(d="M1 9.243l-.707-.707L3.828 5 .293 1.464 1 .757 5.243 5 1 9.243z") 
+
+     .brands-box(itemscope)
       h1.heading-primary.mb-7per(itemprop="name") Мы продаем запчасти для <br> следующих марок автомобилей:
 
       ul.brands-box__list(itemscope itemtype="https://schema.org/BreadcrumbList")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") Audi
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Audi
          meta(itemprop="position" content="1")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") Ford
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Ford
          meta(itemprop="position" content="2")
-    
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") Mazda
-         meta(itemprop="position" content="3")
-      
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") Peugeot
-         meta(itemprop="position" content="4")
-       
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") Subaru
-         meta(itemprop="position" content="5")
-       
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") BMW
-         meta(itemprop="position" content="6")
-
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") Kia
-         meta(itemprop="position" content="7")
-    
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") Nissan
-         meta(itemprop="position" content="8")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
         
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") Skoda
+    
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Mazda
+         meta(itemprop="position" content="3")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
+      
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Peugeot
+         meta(itemprop="position" content="4")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
+       
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Subaru
+         meta(itemprop="position" content="5")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
+       
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на BMW
+         meta(itemprop="position" content="6")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
+
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Kia
+         meta(itemprop="position" content="7")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
+    
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Nissan
+         meta(itemprop="position" content="8")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
+        
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Skoda
          meta(itemprop="position" content="9")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
     
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") Volkswagen
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Volkswagen
          meta(itemprop="position" content="10")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
     
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") Fiat
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Fiat
          meta(itemprop="position" content="11")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
     
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-        a.brands-box__link(href="#" itemprop="item") 
-         span(itemprop="name") Lexus
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Lexus
          meta(itemprop="position" content="12")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
     
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") Opel
-          meta(itemprop="position" content="13")
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Opel
+         meta(itemprop="position" content="13")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") SsangYong
-          meta(itemprop="position" content="14")
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на SsangYong
+         meta(itemprop="position" content="14")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") Volvo
-          meta(itemprop="position" content="15")
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Volvo
+         meta(itemprop="position" content="15")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") Masserati
-          meta(itemprop="position" content="16")
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Masserati
+         meta(itemprop="position" content="16")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") Audi
-          meta(itemprop="position" content="17")
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Audi
+         meta(itemprop="position" content="17")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") Mazda
-          meta(itemprop="position" content="18")
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Mazda
+         meta(itemprop="position" content="18")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") Honda
-          meta(itemprop="position" content="19")
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Honda
+         meta(itemprop="position" content="19")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") Mercedes
-          meta(itemprop="position" content="20")
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Mercedes
+         meta(itemprop="position" content="20")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") Renault
-          meta(itemprop="position" content="21")
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Renault
+         meta(itemprop="position" content="21")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") Suzuki
-          meta(itemprop="position" content="22")
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+         span(itemprop="name") Запчасти на Suzuki
+         meta(itemprop="position" content="22")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") Chevrolet
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+          span(itemprop="name") Запчасти на Chevrolet
           meta(itemprop="position" content="23")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
-       li.brands-box__item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
-         a.brands-box__link(href="#" itemprop="item") 
-          span(itemprop="name") Renault
+       li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
+        a.brand-item__link(href="#" itemprop="item") 
+          span(itemprop="name") Запчасти на Renault
           meta(itemprop="position" content="24")
+        svg.icon-box__icon
+         use(xlink:href="#arrow-right")
 
     
 
