--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,12 +1,12 @@
 body {
-  font-family: "Roboto", sans-serif;
   font-size: $default-font-size; // 16px // 1rem = 10px
+  font-family: $font-roboto;
   color: $color-primary;
 }
 
 .heading-primary {
   line-height: 3.2rem;
   color: $color-black;
-  font-weight: 500;
   font-size: 2.4rem;
+  font-weight: 500;
 }
