--- a/scss/layouts/_brands-box.scss
+++ b/scss/layouts/_brands-box.scss
@@ -1,3 +1,16 @@
 .brands-box {
   padding: 6.5rem 9.8px 8.4rem 4.9%;
+
+  &__brand-item {
+    &:not(:last-child) {
+      margin-right: 3.1%;
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+
+    list-style: none;
+  }
 }
