--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-.transition-all, .brand-item:after {
+.transition-all, .brand-item span:nth-child(2), .brand-item__paragraph, .brand-item:after, .brand-item__link,
+.brand-item svg {
   transition: all 0.5s; }
 
 body {
@@ -56,13 +57,33 @@ html {
     top: 0; }
   .brand-item:hover:after {
     opacity: 1; }
+  .brand-item span:nth-child(2) {
+    position: absolute;
+    font-size: 1.3rem;
+    display: block;
+    color: #9d9d9d;
+    opacity: 0;
+    visibility: hidden; }
+  .brand-item:hover span:nth-child(2) {
+    opacity: 1;
+    visibility: visible; }
   .brand-item svg {
+    height: 2.2rem;
+    width: 2.2rem;
+    padding: 0.6rem 0.85rem;
     fill: #333;
-    height: 1rem;
-    width: 1rem; }
+    border-radius: 50%; }
+  .brand-item:hover svg {
+    background-color: #1a77d2;
+    fill: #fff; }
+  .brand-item:hover .brand-item__link {
+    transform: translateY(-1.2rem); }
   .brand-item__link {
     color: inherit;
-    text-decoration: none; }
+    text-decoration: none;
+    position: relative; }
+  .brand-item:hover .brand-item__paragraph {
+    color: #1a77d2; }
 
 .brands-box {
   padding: 6.5rem 9.8px 8.4rem 4.9%; }
