--- a/pug/index.pug
+++ b/pug/index.pug
@@ -21,14 +21,16 @@ html(lang="en")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Audi
+         p.brand-item__paragraph(itemprop="name") Запчасти на Audi
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="1")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Ford
+         p.brand-item__paragraph(itemprop="name") Запчасти на Ford
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="2")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
@@ -36,154 +38,176 @@ html(lang="en")
     
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Mazda
+         p.brand-item__paragraph(itemprop="name") Запчасти на Mazda
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="3")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
       
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Peugeot
+         p.brand-item__paragraph(itemprop="name") Запчасти на Peugeot
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="4")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
        
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Subaru
+         p.brand-item__paragraph(itemprop="name") Запчасти на Subaru
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="5")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
        
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на BMW
+         p.brand-item__paragraph(itemprop="name") Запчасти на BMW
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="6")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Kia
+         p.brand-item__paragraph(itemprop="name") Запчасти на Kia
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="7")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
     
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Nissan
+         p.brand-item__paragraph(itemprop="name") Запчасти на Nissan
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="8")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
         
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Skoda
+         p.brand-item__paragraph(itemprop="name") Запчасти на Skoda
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="9")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
     
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Volkswagen
+         p.brand-item__paragraph(itemprop="name") Запчасти на Volkswagen
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="10")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
     
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Fiat
+         p.brand-item__paragraph(itemprop="name") Запчасти на Fiat
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="11")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
     
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Lexus
+         p.brand-item__paragraph(itemprop="name") Запчасти на Lexus
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="12")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
     
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Opel
+         p.brand-item__paragraph(itemprop="name") Запчасти на Opel
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="13")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на SsangYong
+         p.brand-item__paragraph(itemprop="name") Запчасти на SsangYong
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="14")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Volvo
+         p.brand-item__paragraph(itemprop="name") Запчасти на Volvo
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="15")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Masserati
+         p.brand-item__paragraph(itemprop="name") Запчасти на Masserati
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="16")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Audi
+         p.brand-item__paragraph(itemprop="name") Запчасти на Audi
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="17")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Mazda
+         p.brand-item__paragraph(itemprop="name") Запчасти на Mazda
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="18")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Honda
+         p.brand-item__paragraph(itemprop="name") Запчасти на Honda
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="19")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Mercedes
+         p.brand-item__paragraph(itemprop="name") Запчасти на Mercedes
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="20")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Renault
+         p.brand-item__paragraph(itemprop="name") Запчасти на Renault
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="21")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-         span(itemprop="name") Запчасти на Suzuki
+         p.brand-item__paragraph(itemprop="name") Запчасти на Suzuki
+         span(itemprop="count") более 3948274 
          meta(itemprop="position" content="22")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-          span(itemprop="name") Запчасти на Chevrolet
+          p.brand-item__paragraph(itemprop="name") Запчасти на Chevrolet
+          span(itemprop="count") более 3948274 
           meta(itemprop="position" content="23")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
-          span(itemprop="name") Запчасти на Renault
+          p.brand-item__paragraph(itemprop="name") Запчасти на Renault
+          span(itemprop="count") более 3948274 
           meta(itemprop="position" content="24")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
