--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,9 +1,13 @@
 // COLORS
 $color-primary: #333;
+
+$color-gray-dark: #9d9d9d;
 $color-gray: #e5e5e5;
 
 $color-white: #fff;
 $color-black: #000;
+
+$color-blue: #1a77d2;
 
 //FONT_SIZE
 $default-font-size: 1.6rem;
