--- a/css/main.css
+++ b/css/main.css
@@ -43,10 +43,10 @@ html {
   .brand-item:after {
     height: 100%;
     width: 100%;
+    transform: scaleY(1.25) scaleX(1.1) translateX(-1rem);
     box-shadow: 0 0 3rem rgba(122, 122, 122, 0.28);
     padding: 1.9rem 2.4rem 2.2rem 0;
     background-color: #fff;
-    transform: scale(1.18);
     transition: all 0.5s;
     position: absolute;
     display: block;
@@ -59,11 +59,11 @@ html {
     opacity: 1; }
   .brand-item span:nth-child(2) {
     position: absolute;
+    color: #9d9d9d;
+    visibility: hidden;
     font-size: 1.3rem;
     display: block;
-    color: #9d9d9d;
-    opacity: 0;
-    visibility: hidden; }
+    opacity: 0; }
   .brand-item:hover span:nth-child(2) {
     opacity: 1;
     visibility: visible; }
