--- a/scss/components/_brand-item.scss
+++ b/scss/components/_brand-item.scss
@@ -16,10 +16,10 @@
   &:after {
     @include heightWidth(100%, 100%);
 
+    transform: scaleY(1.25) scaleX(1.1) translateX(-1rem);
     box-shadow: 0 0 3rem rgba(122, 122, 122, 0.28);
     padding: 1.9rem 2.4rem 2.2rem 0;
     background-color: $color-white;
-    transform: scale(1.18);
     transition: all 0.5s;
     position: absolute;
     display: block;
@@ -45,11 +45,11 @@
   span:nth-child(2) {
     position: absolute;
 
+    color: $color-gray-dark;
+    visibility: hidden;
     font-size: 1.3rem;
     display: block;
-    color: $color-gray-dark;
     opacity: 0;
-    visibility: hidden;
   }
 
   &:hover span:nth-child(2) {
