created & styled a brand-box btn

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -15,9 +15,9 @@ html(lang="en")
         path(d="M1 9.243l-.707-.707L3.828 5 .293 1.464 1 .757 5.243 5 1 9.243z") 
 
      .brands-box(itemscope)
-      h1.heading-primary.mb-7per(itemprop="name") Мы продаем запчасти для <br> следующих марок автомобилей:
+      h1.heading-primary.mb-69px(itemprop="name") Мы продаем запчасти для <br> следующих марок автомобилей:
 
-      ul.brands-box__list(itemscope itemtype="https://schema.org/BreadcrumbList")
+      ul.brands-box__list(itemscope itemtype="https://schema.org/BreadcrumbList").mb-56px 
 
        li.brands-box__brand-item.brand-item(itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem")
         a.brand-item__link(href="#" itemprop="item") 
@@ -211,6 +211,7 @@ html(lang="en")
           meta(itemprop="position" content="24")
         svg.icon-box__icon
          use(xlink:href="#arrow-right")
-
+      
+      a(href="#").brands-box__btn.btn Запчасти для других марок
     
 
