--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,12 @@
 .transition-all, .brand-item span:nth-child(2), .brand-item__paragraph, .brand-item:after, .brand-item__link,
-.brand-item svg {
+.brand-item svg, .btn:link, .btn:visited {
   transition: all 0.5s; }
 
 body {
   font-size: 1.6rem;
   font-family: "Roboto", sans-serif;
-  color: #333; }
+  color: #333;
+  font-weight: 400; }
 
 .heading-primary {
   line-height: 3.2rem;
@@ -13,8 +14,11 @@ body {
   font-size: 2.4rem;
   font-weight: 500; }
 
-.mb-7per {
-  margin-bottom: 7.1%; }
+.mb-69px {
+  margin-bottom: 6.9rem; }
+
+.mb-56px {
+  margin-bottom: 5.6rem; }
 
 *,
 *::before,
@@ -35,7 +39,6 @@ html {
   flex: 0 0 20%;
   width: 23.8rem;
   cursor: pointer;
-  font-weight: 400;
   position: relative;
   line-height: 2.5rem;
   padding: 2.1rem 2.1rem 2.1rem 0;
@@ -78,18 +81,34 @@ html {
     fill: #fff; }
   .brand-item:hover .brand-item__link {
     transform: translateY(-1.2rem); }
-  .brand-item__link {
+  .brand-item__link:link, .brand-item__link:visited {
     color: inherit;
     text-decoration: none;
     position: relative; }
   .brand-item:hover .brand-item__paragraph {
     color: #1a77d2; }
 
+.btn:link, .btn:visited {
+  background-color: #f5f5f5;
+  text-decoration: none;
+  padding: 2rem 4.1rem;
+  color: #1a77d2;
+  line-height: 2rem; }
+
+.btn:hover {
+  color: #fff;
+  background-color: #9d9d9d; }
+
 .brands-box {
-  padding: 6.5rem 9.8px 8.4rem 4.9%; }
+  padding: 6.5rem 9.8px 8.4rem 4.9%;
+  position: relative; }
   .brands-box__brand-item:not(:last-child) {
     margin-right: 3.1%; }
   .brands-box__list {
     display: flex;
     flex-wrap: wrap;
     list-style: none; }
+  .brands-box__btn {
+    transform: translateX(-50%);
+    position: absolute;
+    left: 50%; }
