--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -2,6 +2,7 @@ body {
   font-size: $default-font-size; // 16px // 1rem = 10px
   font-family: $font-roboto;
   color: $color-primary;
+  font-weight: 400;
 }
 
 .heading-primary {
