--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -2,3 +2,23 @@
   height: $height;
   width: $width;
 }
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == tab-port {
+    @media only screen and (min-width: 23.4375em) {
+      @content;
+    }
+  } //375px
+
+  @if $breakpoint == tab-port {
+    @media only screen and (min-width: 47.75em) {
+      @content;
+    }
+  } //764px
+
+  @if $breakpoint == tab-land {
+    @media only screen and (min-width: 62.5em) {
+      @content;
+    }
+  } //1000px
+}
