--- a/css/main.css
+++ b/css/main.css
@@ -13,12 +13,21 @@ body {
   color: #000;
   font-size: 2.4rem;
   font-weight: 500; }
+  @media only screen and (max-width: 48em) {
+    .heading-primary {
+      font-size: 2rem; } }
 
 .mb-69px {
   margin-bottom: 6.9rem; }
+  @media only screen and (max-width: 48em) {
+    .mb-69px {
+      margin-bottom: 1rem; } }
 
 .mb-56px {
   margin-bottom: 5.6rem; }
+  @media only screen and (max-width: 48em) {
+    .mb-56px {
+      margin-bottom: 2.5rem; } }
 
 *,
 *::before,
@@ -36,18 +45,17 @@ html {
   justify-content: space-between;
   align-items: center;
   z-index: 1;
-  flex: 0 0 20%;
-  width: 23.8rem;
+  width: 100%;
   cursor: pointer;
   position: relative;
   line-height: 2.5rem;
-  padding: 2.1rem 2.1rem 2.1rem 0;
+  padding: 2.1rem 0;
   border-bottom: solid 0.1rem rgba(229, 229, 229, 0.75); }
   .brand-item:after {
     height: 100%;
     width: 100%;
-    transform: scaleY(1.25) scaleX(1.1) translateX(-1rem);
     box-shadow: 0 0 3rem rgba(122, 122, 122, 0.28);
+    transform: scaleY(1.25) scaleX(1.1);
     padding: 1.9rem 2.4rem 2.2rem 0;
     background-color: #fff;
     transition: all 0.5s;
@@ -93,22 +101,44 @@ html {
   text-decoration: none;
   padding: 2rem 4.1rem;
   color: #1a77d2;
-  line-height: 2rem; }
+  line-height: 2rem;
+  text-align: center; }
+
+@media only screen and (max-width: 48em) {
+  .btn {
+    width: 80%;
+    margin-bottom: 6.9rem; } }
+
+@media only screen and (max-width: 23.4375em) {
+  .btn {
+    padding: 2rem 1rem !important; } }
 
 .btn:hover {
   color: #fff;
   background-color: #9d9d9d; }
 
 .brands-box {
-  padding: 6.5rem 9.8px 8.4rem 4.9%;
+  padding: 6.5rem 9.8rem 0 9.8rem;
   position: relative; }
-  .brands-box__brand-item:not(:last-child) {
-    margin-right: 3.1%; }
+  @media only screen and (max-width: 62.5em) {
+    .brands-box {
+      padding: 7.4rem 3rem 0 3rem; } }
+  @media only screen and (max-width: 48em) {
+    .brands-box {
+      padding: 4.6rem 2.3rem 0 2.3rem; } }
   .brands-box__list {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-column-gap: 5rem;
+    grid-template-columns: repeat(auto-fit, minmax(24.8rem, 1fr));
     list-style: none; }
   .brands-box__btn {
     transform: translateX(-50%);
+    margin-bottom: 8.4rem;
     position: absolute;
     left: 50%; }
+    @media only screen and (max-width: 48em) {
+      .brands-box__btn {
+        margin-bottom: 7.4rem; } }
+    @media only screen and (max-width: 23.4375em) {
+      .brands-box__btn {
+        margin-bottom: 6.9rem; } }
