--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -4,20 +4,20 @@
 }
 
 @mixin respond($breakpoint) {
-  @if $breakpoint == tab-port {
-    @media only screen and (min-width: 23.4375em) {
+  @if $breakpoint == phone {
+    @media only screen and (max-width: 23.4375em) {
       @content;
     }
   } //375px
 
   @if $breakpoint == tab-port {
-    @media only screen and (min-width: 47.75em) {
+    @media only screen and (max-width: 48em) {
       @content;
     }
-  } //764px
+  } //768px
 
   @if $breakpoint == tab-land {
-    @media only screen and (min-width: 62.5em) {
+    @media only screen and (max-width: 62.5em) {
       @content;
     }
   } //1000px
