--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -10,4 +10,8 @@ body {
   color: $color-black;
   font-size: 2.4rem;
   font-weight: 500;
+
+  @include respond(tab-port) {
+    font-size: 2rem;
+  }
 }
