--- a/scss/components/_brand-item.scss
+++ b/scss/components/_brand-item.scss
@@ -4,19 +4,18 @@
   align-items: center;
 
   z-index: 1;
-  flex: 0 0 20%;
-  width: 23.8rem;
+  width: 100%;
   cursor: pointer;
   position: relative;
   line-height: 2.5rem;
-  padding: 2.1rem 2.1rem 2.1rem 0;
+  padding: 2.1rem 0;
   border-bottom: solid 0.1rem rgba(#e5e5e5, 0.75);
 
   &:after {
     @include heightWidth(100%, 100%);
 
-    transform: scaleY(1.25) scaleX(1.1) translateX(-1rem);
     box-shadow: 0 0 3rem rgba(122, 122, 122, 0.28);
+    transform: scaleY(1.25) scaleX(1.1);
     padding: 1.9rem 2.4rem 2.2rem 0;
     background-color: $color-white;
     transition: all 0.5s;
