--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ html {
   .brand-item:hover .brand-item__link {
     transform: translateY(-1.2rem); }
   .brand-item__link:link, .brand-item__link:visited {
+    width: 100%;
     color: inherit;
     text-decoration: none;
     position: relative; }
