--- a/scss/components/_brand-item.scss
+++ b/scss/components/_brand-item.scss
@@ -75,6 +75,7 @@
   &__link {
     &:link,
     &:visited {
+      width: 100%;
       color: inherit;
       text-decoration: none;
       position: relative;
