--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import "base/base";
 
 @import "components/brand-item";
+@import "components/loader";
 @import "components/btn";
 
 @import "layouts/brands-box";
