--- a/scss/layouts/_brands-box.scss
+++ b/scss/layouts/_brands-box.scss
@@ -15,6 +15,8 @@
     grid-column-gap: 5rem;
     grid-template-columns: repeat(auto-fit, minmax(24.8rem, 1fr));
 
+    min-height: 14rem;
+
     list-style: none;
   }
 
